--- a/src/app/componets/table/table.component.scss
+++ b/src/app/componets/table/table.component.scss
@@ -31,3 +31,16 @@ table{
 button{
     min-width: 8em;
 }
+.title{
+    height: 10em;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    margin-top: 10em;
+    h1{
+        font-size: 2.5em;
+        font-weight: bold;
+    }
+    
+}
