--- a/src/app/componets/table/table.component.html
+++ b/src/app/componets/table/table.component.html
@@ -1,3 +1,6 @@
+<div class="title">
+<h1 >Manage Tasks</h1>
+</div>
 <table mat-table [dataSource]="dataSource"  class="mat-elevation-z8">
 
     <!--- Note that these columns can be defined in any order.
