--- a/src/app/componets/table/table.component.html
+++ b/src/app/componets/table/table.component.html
@@ -31,7 +31,7 @@
     </ng-container>
 
     <ng-container matColumnDef="dropdown">
-      <th mat-header-cell *matHeaderCellDef ><p style="margin-left: 2em;">Details </p> </th>
+      <th mat-header-cell *matHeaderCellDef ></th>
       <td mat-cell *matCellDef="let element" > 
         <mat-expansion-panel class="panel">
     <mat-expansion-panel-header>
